Handle core function

--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -2,51 +2,53 @@
   <h2>Tạo product</h2>
 
   <%= form_for(@product, url: website_products_path) do |form| %>
-
-  <div id="error_explanation">
-    <ul>
-      <% @product.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :title %>
-    <%= form.text_field :title, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :url %>
-    <%= form.text_field :url, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :description %>
-    <%= form.text_field :description, class: "form-control" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :content %>
-    <%= form.rich_text_area :content , class: "rich_text_area" %>
-  </div>
-
-  <div class="form-group">
-    <%= form.label :image %>
-    <%= form.file_field :image, id: "inputImageProduct", class: "form-control" %>
-
-    <div class="image-post">
-      <img id="imagePost" src="<%= @product.image_url %>">
+    <div id="error_explanation">
+      <ul>
+        <% @product.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
     </div>
-  </div>
 
-  <div class="button-create">
-    <%= form.submit "Tạo", class: "btn btn-outline-primary" %>
-  </div>
-<% end %>
+    <div class="form-group">
+      <%= form.label :title %>
+      <%= form.text_field :title, class: "form-control" %>
+    </div>
 
-<script type="text/javascript">
+    <div class="form-group">
+      <%= form.label :url %>
+      <input class="form-control" disabled="disabled" id="url-display-field" >
+      <%= form.hidden_field :url, id: "url-hidden-field" %>
+    </div>
 
-</script>
+    <div class="form-group">
+      <%= form.label :description %>
+      <%= form.text_field :description, class: "form-control" %>
+    </div>
 
+    <% if @model.validators_on(:category).any? { |v| v.is_a?(ActiveRecord::Validations::PresenceValidator) } %>
+      <div class="form-group">
+        <%= form.label :category %>
+        <%= form.select(:category_id, options_for_select(Category.generate_options(params[:website_id])), {}, class: "form-control") %>
+      </div>
+    <% end %>
+
+    <div class="form-group">
+      <%= form.label :content %>
+      <%= form.rich_text_area :content , class: "rich_text_area" %>
+    </div>
+
+    <div class="form-group">
+      <%= form.label :image %>
+      <%= form.file_field :image, id: "inputImageProduct", class: "form-control" %>
+
+      <div class="image-post">
+        <img id="imagePost" src="<%= @product.image_url %>">
+      </div>
+    </div>
+
+    <div class="button-create">
+      <%= form.submit "Tạo", class: "btn btn-outline-primary" %>
+    </div>
+  <% end %>
 </div>
