--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,7 +1,7 @@
-<div class="container">
-  <h2>Tạo product</h2>
+<div class="container" data-model="<%= @product.class.to_s.underscore %>">
+  <h2>Chỉnh sửa product</h2>
 
-  <%= form_for(@product, url: website_products_path) do |form| %>
+  <%= form_for(@product, url: website_product_path(website_id: params[:website_id], id: @product.id), method: :patch) do |form| %>
     <div id="error_explanation">
       <ul>
         <% @product.errors.full_messages.each do |message| %>
@@ -17,8 +17,7 @@
 
     <div class="form-group">
       <%= form.label :url %>
-      <input class="form-control" disabled="disabled" id="url-display-field" >
-      <%= form.hidden_field :url, id: "url-hidden-field" %>
+      <%= form.text_field :url, disabled: "disabled", class: "form-control" %>
     </div>
 
     <div class="form-group">
@@ -39,12 +38,6 @@
     </div>
 
     <div class="form-group">
-      <%= form.label :keywords %>
-      <input class="form-control" id="keywords-field">
-      <%= form.hidden_field :keywords, class: "form-control" %>
-    </div>
-
-    <div class="form-group">
       <%= form.check_box :content_copied %>
       <%= form.label :content_copied, "Sao chép nội dung từ nguồn khác?" %>
     </div>
@@ -59,7 +52,7 @@
     </div>
 
     <div class="button-create">
-      <%= form.submit "Tạo", class: "btn btn-outline-primary" %>
+      <%= form.submit "Cập nhật", class: "btn btn-outline-primary" %>
     </div>
   <% end %>
 </div>
