--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,116 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Uniwebsite</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>Uniwebsite</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+</head>
 
-  <body>
-    <%= yield %>
+<body>
+  <body class="hold-transition sidebar-mini">
+    <div class="wrapper">
+      <nav class="main-header navbar navbar-expand navbar-white navbar-light">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" data-widget="pushmenu" href="#" role="button"><i class="fas fa-bars"></i></a>
+          </li>
+
+          <li class="nav-item dropdown">
+            <% website = current_user.websites.first if current_user %>
+          </li>
+        </ul>
+
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link" data-toggle="dropdown" href="#">
+              <i class="far fa-bell"></i>
+              <span class="badge badge-warning navbar-badge">0</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" data-widget="fullscreen" href="#" role="button">
+              <i class="fas fa-expand-arrows-alt"></i>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <aside class="main-sidebar sidebar-dark-primary elevation-4">
+
+        <div class="sidebar">
+          <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+            <div class="info">
+              <a href="/">
+                <span class="brand-text font-weight-light">WEBSITEGIÁRẺ.CO</span>
+              </a>
+            </div>
+          </div>
+
+          <% if website %>
+            <nav class="mt-2">
+              <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+                <li class="nav-item">
+                  <a href="<%= website_products_path(website_id: website.id) %>" class="nav-link<%= params[:controller] == 'products' ? ' active' : '' %>">
+                    <i class="nav-icon fas fa-edit"></i>
+                    <p>
+                      Bài viết
+                      <i class="right fas fa-angle-left"></i>
+                    </p>
+                  </a>
+                </li>
+
+                <li class="nav-item<%= params[:controller] == 'users' ? ' menu-open' : '' %>">
+                  <a href="<%= website_users_path(website_id: website.id) %>" class="nav-link<%= params[:controller] == 'users' ? ' active' : '' %>">
+                    <i class="nav-icon fas fa-users"></i>
+                    <p>
+                      Người dùng
+                      <i class="fas fa-angle-left right"></i>
+                    </p>
+                  </a>
+                </li>
+
+                <li class="nav-item mt-5">
+                  <%= link_to "<i class='fas fa-sign-out-alt nav-icon'></i><p>Đăng xuất</p>".html_safe, destroy_user_session_path, class: "nav-link" %>
+                </li>
+              </ul>
+            </nav>
+          <% end %>
+        </div>
+      </aside>
+
+      <div class="content-wrapper">
+        <div class="content">
+          <div class="container-fluid">
+            <% flash.each do |type, msg| %>
+            <div class="alert alert-<%= type %>" id="alert">
+              <%= msg %>
+            </div>
+            <% end %>
+            <%= yield %>
+          </div>
+        </div>
+      </div>
+
+      <footer class="main-footer">
+        <strong>Admin Manage</strong>
+        <div class="float-right d-none d-sm-inline-block">
+          <a href="websitegiare.co">Websitegiare.co</a>
+        </div>
+      </footer>
+    </div>
   </body>
+  <style type="text/css">
+    .nav-treeview .nav-item{
+      margin-left: 20px !important;
+    }
+
+    .nav-treeview .nav-link{
+      width: 213px !important;
+    }
+  </style>
+</body>
 </html>
