--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -12,7 +12,7 @@
 
     <div class="form-group">
       <%= form.label :title %>
-      <%= form.text_field :title, class: "form-control" %>
+      <%= form.text_field :title, class: "form-control", id: "product_websitegiare_title" %>
     </div>
 
     <div class="form-group">
@@ -41,7 +41,7 @@
     <div class="form-group">
       <%= form.label :keywords %>
       <input class="form-control" id="keywords-field">
-      <%= form.hidden_field :keywords, class: "form-control" %>
+      <%= form.hidden_field :keywords, class: "form-control", id: "product_websitegiare_keywords" %>
     </div>
 
     <div class="form-group">
